--- a/mklite_frontend/package.json
+++ b/mklite_frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.13.1",
     "file-saver": "^2.0.5",
+    "lucide-react": "^0.561.0",
     "next": "15.5.5",
     "react": "19.1.0",
     "react-datepicker": "^8.9.0",
