--- a/mklite_frontend/package.json
+++ b/mklite_frontend/package.json
@@ -11,7 +11,7 @@
     "axios": "^1.13.1",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.561.0",
-    "next": "15.5.5",
+    "next": "^15.5.9",
     "react": "19.1.0",
     "react-datepicker": "^8.9.0",
     "react-dom": "19.1.0",
